--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
 
 <!-- navbar starts -->
 <header>
-        <a href="/" class="logo"><i class="fab fa-node-js"></i> Manoj BJ</a>
-
+  <a href="/" class="logo">< Manoj BJ</a>
+  
         <div id="menu" class="fas fa-bars"></div>
         <nav class="navbar">
             <ul>
@@ -221,77 +221,55 @@
 
   <div class="timeline">
 
-    <div class="container right">
-      <div class="content">
-        <div class="tag">
-          <h2>Self Employed</h2>
-        </div>
-        <div class="desc">
-            <h3>Full Stack Developer</h3>
-            <p>Oct 2021 - present</p>
-        </div>
-      </div>
-    </div>
-
     <div class="container left">
       <div class="content">
         <div class="tag">
-          <h2>Mapstreak Flyseas</h2>
+          <h2>Accenture</h2>
         </div>
         <div class="desc">
-            <h3>Web Developer | Internship</h3>
-            <p>June 2021 - Dec 2021</p>
+            <h3>Development Analyst</h3>
+            <p>July 20224 - present</p>
         </div>
       </div>
     </div>
 
     <div class="container right">
-      <div class="content">
-        <div class="tag">
-          <h2>The Spark Foundation</h2>
-        </div>
-        <div class="desc">
-            <h3>Website Developer | Internship</h3>
-            <p>May 2021 - June 2021</p>
+        <div class="content">
+          <div class="tag">
+            <h2>EpicMinds Information Technology</h2>
+          </div>
+          <div class="desc">
+              <h3>Senior Software Developer</h3>
+              <p>April 2023 - May 2024</p>
+          </div>
         </div>
       </div>
-    </div>
 
-    <div class="container left">
-      <div class="content">
-        <div class="tag">
-          <h2>The Spark Foundation</h2>
-        </div>
-        <div class="desc">
-            <h3>Mobile Application Developer | Internship</h3>
-            <p>April 2021 - May 2021</p>
+      <div class="container left">
+        <div class="content">
+          <div class="tag">
+            <h2>EpicMinds Information Technology</h2>
+          </div>
+          <div class="desc">
+              <h3>Software Developer</h3>
+              <p>June 2022 - April 2023</p>
+          </div>
         </div>
       </div>
-    </div>
 
     <div class="container right">
       <div class="content">
         <div class="tag">
-          <h2>Frshr Technologies</h2>
+          <h2>EpicMinds Information Technology</h2>
         </div>
         <div class="desc">
-            <h3>Wordpress Developer | Internship</h3>
-            <p>April 2021 - April 2021</p>
+            <h3>Associate Software Developer</h3>
+            <p>Sept 2021 - June 2022</p>
         </div>
       </div>
     </div>
 
-    <div class="container left">
-      <div class="content">
-        <div class="tag">
-          <h2>WonderingBlog</h2>
-        </div>
-        <div class="desc">
-            <h3>Web Development & SEO | Internship</h3>
-            <p>March 2021 - April 2021</p>
-        </div>
-      </div>
-    </div>
+    
   </div>
 
   <div class="morebtn">
