removed view all

--- a/index.html
+++ b/index.html
@@ -205,11 +205,7 @@
 
 </div>
 
-<div class="viewall">
-  <a href="/projects" class="btn"><span>View All</span>
-    <i class="fas fa-arrow-right"></i>
-</a>
-</div>
+
 
 </section>
 <!-- work project section ends -->
@@ -272,11 +268,11 @@
     
   </div>
 
-  <div class="morebtn">
+  <!-- <div class="morebtn">
     <a href="/experience" class="btn"><span>View All</span>
       <i class="fas fa-arrow-right"></i>
   </a>
-  </div>
+  </div> -->
 
 </div>
 
